[package]
name = "acp"
version = "0.1.0"
authors = ["rafi"]
edition = "2018"

[lib]
name = "libacp"
path = "src/lib/lib.rs"

[[bin]]
name = "acp"
path = "src/client/main.rs"

[[bin]]
name = "acpd"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0.38"
bytes = "1.0.1"
prost = "0.7.0"
quiche = "0.7.0"
ring = { version = "0.16.20", features = ["std"] }
thiserror = "1.0.23"
tokio = { version = "1.1.1", features = ["full"] }
tracing = "0.1.23"
tracing-subscriber = "0.2.17"

[build-dependencies]
prost-build = "0.7.0"