[package]
name = "acp"
version = "0.1.0"
authors = ["rafi"]
edition = "2018"

[lib]
name = "libacp"
path = "src/lib/lib.rs"

[[bin]]
name = "acp"
path = "src/client/main.rs"

[[bin]]
name = "acpd"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0"
bitvec = "0.22"
bytes = "1.0"
futures = "0.3"
prost = "0.7"
quiche = { git = "https://github.com/rafibaum/quiche", branch = "bbr" }
ring = { version = "0.16", features = ["std"] }
thiserror = "1.0"
tokio = { version = "1.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
prost-build = "0.7.0"